@@ -4,11 +4,15 @@
 Git Master
 ------------------------------------------------------------------------------------------------------------------------
 
+GUI:
+	- Added plugin archive upload feature (tar.gz, tar.bz2 and zip)
+
 Tickets:
 	- Fixed #782: Bug - Notice: A non well formed numeric value encountered...
 	- Fixed #786: Bug - Httpd Server impl. - apache_php_fpm. - No input file specified
 	- Fixed #790: Defect - Postfix 2.10.x - Relay access - SASL authentication
 	- Fixed #793: Bug - Autoinstaller/Setup - Admin user is getting new id in database
+	- Fixed #808: Enhancement - Possibility to Upload i-MSCP Plugins via GUI
 
 ------------------------------------------------------------------------------------------------------------------------
 1.1.0-rc2.3
